<resources>
    <string name="app_name">Horizon App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_marker">Add Marker</string>
    <string name="verification_message">Please check your Email</string>


    <string name="my_map_api_key">AIzaSyAvv8gjeT3213AwgJ6vASc28hC8b8KIGPY</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_to">Welcome to</string>
    <string name="horizon">Horizon</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_Name">Enter your Name</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="daily_suggestions">Daily Suggestions</string>
    <string name="favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_photo">Product photo</string>
    <string name="add_product_photo">Add product photo</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product Description</string>
    <string name="category">Category</string>

    <string name="product_details">Product Details</string>
    <string name="example_descript" translatable="false">A red rose, a symbol of passionate love, captivates with its velvety petals and rich crimson hue. The graceful bloom unfolds in layers, revealing a timeless elegance. Its intoxicating fragrance evokes romance, while thorns speak of love\'s delicate balance. A symbol of beauty and desire, the red rose embodies the essence of heartfelt emotions in a mere glance.</string>
    <string name="length">Length</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="select_language">Select Language</string>
    <string name="colors_optional">Colors (Optional)</string>
    <string name="add_color">Add Color</string>
    <string name="lengths_optional">Lengths (Optional)</string>
    <string name="add_length">Add Length</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="edit_personal_details">Edit Account</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="oops">OOPS!!</string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please wait..</string>
    <string name="uploading">Uploading..</string>
    <string name="product_name_can_t_be_empty">Product name can\'t be empty.</string>
    <string name="you_must_select_product_category">You must select product category.</string>
    <string name="product_price_can_t_be_empty">Product price can\'t be empty.</string>
    <string name="invalid_price_format">Invalid price format.</string>
    <string name="product_price_can_t_be_less_than_zero">Product price can\'t be less than zero.</string>
    <string name="you_must_select_product_photo">You must select product photo.</string>
    <string name="failed_to_upload_photo">"Failed to upload photo: "</string>
    <string name="failed_to_upload_product">"Failed to upload product: "</string>
    <string name="payments">Payments</string>
    <string name="favorites">Favorites</string>
    <string name="cancel">Cancel</string>
    <string name="general">General</string>
    <string name="continue_with_facebook">Continue with FaceBook</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="forgot_password">
		<font fgcolor='#000000'>Forgot</font>
        <font fgcolor='#E02181'> Password</font>
	</string>
    <string name="forgot_password_info">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="send">Send</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_must_be_at_least_8_characters_long">Password must be at least 8 characters long</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="notification">Notification</string>
    <string name="no_notifications">No Notification yet</string>
    <string name="email_or_password_is_incorrect">Email or Password is incorrect</string>
    <string name="no_exact_matches_found">No exact matches found</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="please_enter_the_verification_code_sent_to_n">Please enter the verification code sent to\n</string>
    <string name="verify_account">Verify Account</string>
    <string name="location">Location</string>
    <string name="you_must_enter_product_details">You must enter product details</string>
    <string name="you_must_select_product_location">You must select product location</string>
    <string name="berq" translatable="false">BERQ</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="my_cart">My Cart</string>
    <string name="order_sumary">Order Sumary</string>
    <string name="total">Total</string>
    <string name="order_now">Order Now</string>
    <string name="transactions">Transactions</string>
    <string name="ads">Ads</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="moderation_of_ads">Moderation Of Ads</string>
    <string name="contact_information">Contact Information</string>
    <string name="upload">Upload</string>
    <string name="professional_acc_info">Advanced Features and capabilities for professional users. Your ads will always be on the main page</string>
    <string name="individaul_info">All the necessary and essential functions for working with ads</string>
    <string name="my_profile">My Profile</string>
    <string name="save">SAVE</string>
    <string name="profile">Profile</string>
    <string name="your_name">Your Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select_delivery_address">Select Delivery address</string>
    <string name="send_reset_password_email">Send Reset Password To Email</string>
    <string name="account_type">Account Type</string>
    <string name="individual">Individual</string>
    <string name="professional">Professional</string>
    <string name="professional_price">5000 Դ per month</string>
    <string name="password_reset_email_sent_successfully">Password Reset Email Sent Successfully</string>
</resources>