<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="@dimen/actionBarSize"
            android:layout_marginTop="5dp"
            android:text="Add New Place"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/darkgrey"
            app:fontFamily="sans-serif-medium" />

        <ImageButton
            android:id="@+id/btn_done"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/vector_done"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:paddingRight="25dp"
            android:paddingBottom="5dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"

                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@color/grey"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    >

                    <ImageView
                        android:id="@+id/product_photo"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/vector_photo" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_product_photo"
                    android:textSize="17sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/darkgrey" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="Place Name"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/darkgrey" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="Location"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/darkgrey" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:maxLines="1"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="Rating"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/darkgrey" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_rating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:inputType="number"
                    android:textColorHint="@color/grey"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/product_description"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/darkgrey" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:textColor="@color/black"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>






            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/colors_optional"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/moreColors"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:src="@drawable/cascade" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/moreColorDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/colorRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingHorizontal="15dp"
                            android:text="@string/add_color"
                            android:textColor="@color/grey"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/addItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/white"
                            android:padding="5dp"
                            app:srcCompat="@drawable/cascade"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lengths_optional"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/moreLengths"
                    android:layout_width="45dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:src="@drawable/cascade"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/moreLengthDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lengthRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingHorizontal="15dp"
                        android:text="@string/add_length"
                        android:textColor="@color/grey"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/addLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"
                        android:padding="5dp"
                        app:srcCompat="@drawable/cascade" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
